# bettingedge

./: .env.example  .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
data/raw/: l1_24_25.csv
docs/: CONTRIBUTING.md
docs/specs/: football-data-notes.md
engine/: __init__.py  pipeline.py
engine/backtest/: simulate.py
engine/cli/: __init__.py  dc_fit.py
engine/config/: backtest.yaml  config.yaml  data.yaml  model.yaml
engine/data/: bookmaker_fusion.py  contracts.py  features.py  ingest.py  loader.py  vig.py
engine/data/specs/: football_data_keys.yaml
engine/eval/: backtester.py  diagnostics.py  feature_assembly.py  leakage.py  metrics.py  metrics_edge.py  prepare_splits.py  regime.py  replay.py  report_html.py  schemas.py
engine/explain/: __init__.py  playbook.py  rulefit.py  shap_utils.py  whatif.py
engine/features/: builder.py  market_microstructure.py  sequence_feats.py  team_embeddings.py
engine/ingest/: __init__.py  _keys_schema.py  keys.py
engine/io/: __init__.py  persist.py  runs.py
engine/market/: calibrate.py  markets.py  odds.py
engine/model/: aggregator.py  common.py  dixon_coles.py  poisson.py  skellam.py
engine/models/: _bp_math.py  _dc_math.py  _kalman.py  bivar_poisson_corr.py  dc_state_space.py  meta_learner.py
engine/online/: bandits.py  context.py
engine/risk/: __init__.py  bet_sizing.py  conformal.py  thresholds.py
engine/signal/: sizing.py  value.py
engine/utils/: io.py  logging.py  mlflow_utils.py  seed.py  time.py
scripts/: migrate_raw.py
tests/: conftest.py  test_backtest_artifacts_display.py  test_backtest_mlflow.py  test_backtest_mlflow_wiring.py  test_bandits.py  test_bivar_poisson.py  test_conformal.py  test_data_contracts.py  test_dc_math.py  test_dc_state_space.py  test_diagnostics.py  test_explain.py  test_ingest_dropna.py  test_ingest_keys.py  test_ingest_keys_cli.py  test_meta_learner.py  test_mlflow_artifacts_viewer.py  test_no_stdlib_shadowing.py  test_placeholder.py  test_ui_wiring.py
ui/: README_UI.md  __init__.py  _io.py  _state.py  _theme.py  _widgets.py  app.py  streamlit_app.py
ui/pages/: 01_📥_Data_Load.py  02_🔍_EDA_Features.py  03_🧠_Model_Lab.py  04_📈_Backtest.py  05_🕵️_Edge_Finder.py  06_🎯_Bet_Sizing_Simulator.py  07_🧠_Explain.py  __init__.py
