[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bettingedge"
version = "0.0.1"
description = "Betting research engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hydra-core",
    "polars",
    "duckdb",
    "mlflow",
    "pandera",
    "xgboost",
    "lightgbm",
    "numpy",
    "scipy",
    "scikit-learn",
    "numba",
    "plotly",
    "streamlit",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-cov>=4",
  "pre-commit>=3",
  "black>=24.3",
  "isort>=5.13",
  "ruff>=0.5",
  "mypy>=1.8",
]
torch = ["torch"]
explain = [
  "shap>=0.45.0",        # wheel manylinux, compat con numpy recente
  "lightgbm>=4.3.0",     # wheel manylinux
  "imodels>=1.4.7; python_version >= '3.9'",  # opzionale; se manca, test devono skippare
]

[project.scripts]
bettingedge-keys = "engine.ingest.keys:main"

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["engine*"]
exclude = ["tests*", "docs*", "ui*", "data*"]

[tool.setuptools.package-data]
engine = ["data/specs/*.yaml", "eval/templates/*.html", "eval/templates/*.htm"]
