[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bettingedge"
version = "0.1.0"
description = "Betting research engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=15.0",
    "numpy>=1.26",
    "python-dateutil>=2.8",
    "typing-extensions>=4.9",
    "scikit-learn>=1.4",
    "streamlit>=1.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "black>=24.3",
  "isort>=5.13",
  "ruff>=0.5",
  "mypy>=1.8",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["engine*", "ui*"]
exclude = ["tests*", "docs*", "data*", "scripts*"]
