[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bettingedge"
version = "0.1.0"
description = "Betting research engine"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pandas==2.2.2",
    "pyarrow==15.0.2",
    "numpy==1.26.4",
    "python-dateutil==2.9.0.post0",
    "typing-extensions==4.10.0",
    "scikit-learn==1.4.2",
    "streamlit==1.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest==7.4.4",
  "black==24.4.2",
  "isort==5.13.2",
  "ruff==0.5.4",
  "mypy==1.8.0",
  "pyyaml==6.0.1",
]

[tool.poetry]
package-mode = false

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["engine*"]
exclude = ["tests*", "docs*", "data*", "scripts*"]
